# pyfilter

./: CLAUDE.md  TODO.txt  pyproject.toml  requirements.txt
examples/linear_gaussian/: square_root.ipynb
kalman_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/kalman_python/: __init__.py  hints.py  kalman_python.py  linear_solve.py  util.py
src/kalman_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/kalman_python/filter/: linear.py
src/kalman_python/models/: __init__.py  linear_transform.py  linear_transition.py
src/kalman_python/types/: covariance.py  random_variables.py
src/pyfilter/: __init__.py  config.py  hints.py  kalman_python.py  linear_solve.py  performance_util.py  util.py
src/pyfilter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyfilter/filter/: linear.py
src/pyfilter/models/: __init__.py  _discretization.py  linear_transform.py  linear_transition.py
src/pyfilter/models/linear/: __init__.py  _base.py  _measurement.py  _transitions.py
src/pyfilter/types/: __init__.py  covariance.py  process_noise.py  random_variables.py
src/sandbox/: mat_mulspeed.py  quad_prod_update.py
tests/filters/: test_kalman_correctness.py  test_linear_sequential.py
tests/filters/data/test_linear_sequential/: test_linear_filter_measurements.csv
tests/models/linear/: _transitions.py
tests/types/: test_covariance.py  test_gaussian_rv.py  test_linear_kalman.py  test_linear_solve.py  test_process_noise.py  test_util.py
